# fluvio-demo-04-12-2022-finance-demo

./: Cargo.toml  Makefile  README.md  quote-data-input.yaml  table-view.yaml  warrants.txt
src/: lib.rs
